# immix-rust

./: .gitignore  Cargo.toml  README.md  build.rs  run-mt-trace.py.example  run.py.example  test_mac.sh
c_src/: common.h  freelist.c  freelist.h  gc.c  gc.h  gcbench.c  immix.h  immix_mutator.c  immix_space.c  main.c  objectmodel.c  objectmodel.h
rust_c_interface/: a.out  immix_rust.h  libimmix_rust.dylib  test.c
src/: exhaust.rs  gcbench.rs  lib.rs  main.rs  mark.rs  mt_gcbench.rs  mt_trace.rs  obj_init.rs  trace.rs
src/common/: address_bitmap.rs  address_map.rs  bitmap.rs  mod.rs  perf.c  perf.rs
src/heap/: mod.rs
src/heap/freelist/: mod.rs
src/heap/gc/: clib.c  mod.rs
src/heap/immix/: immix_mutator.rs  immix_space.rs  mod.rs
src/objectmodel/: mod.rs
