[package]

name = "immix-rust"
version = "0.0.1"
authors = [ "Yi Lin <yi.lin@anu.edu.au>" ]
build = "build.rs"

[build-dependencies.gcc]
git = "https://github.com/alexcrichton/gcc-rs"

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]

name = "immix-rust"
path = "src/main.rs"

[features]
exhaust = []
initobj = []
mt-gcbench = ["mt-trace"]
gcbench = ["mt-trace"]
mark = []
trace = []

mt-trace = []

[dependencies]
time = "0.1.35"
memmap = "0.2.2"
libc = "0.2.2"
lazy_static = "0.1.15"
log = "0.3.5"
aligned_alloc = "0.1.2"
crossbeam = "0.2.8"
